--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,18 @@
 {
   "name": "monolith/relational-database",
-  "description": "Monolith: Relational Database",
-  "license": "MIT",
+  "description": "Relational database component for the Monolith framework.",
   "keywords": [
     "monolith",
     "http"
   ],
-  "homepage": "https://www.getmonolith.com",
   "authors": [
-    {
-      "name": "Mitchell van Wijngaarden",
-      "email": "mitchell@kooding.nl"
-    },
     {
       "name": "Shawn McCool",
       "email": "shawn@heybigname.com"
+    },
+    {
+      "name": "Mitchell van Wijngaarden",
+      "email": "mitchell@kooding.nl"
     }
   ],
   "require": {
