--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   "require": {
     "php": "^7.2",
     "vlucas/phpdotenv": "^2.5@dev",
-    "monolith/dependency-injection": "^7"
+    "monolith/dependency-injection": ">=6"
   },
   "require-dev": {
     "phpspec/phpspec": "^5.0"
