--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^7.4",
     "vlucas/phpdotenv": "^2.5@dev",
-    "monolith/dependency-injection": ">=6"
+    "monolith/dependency-injection": "^8"
   },
   "require-dev": {
-    "phpspec/phpspec": "^5.0"
+    "phpspec/phpspec": "dev-master"
   },
   "autoload": {
     "psr-4": {
