add php 8 support

--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,8 @@
     "monolith",
     "http"
   ],
-  "authors": [
-    {
-      "name": "Shawn McCool",
-      "email": "shawn@heybigname.com"
-    }
-  ],
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "monolith/dependency-injection": "^8",
     "monolith/configuration": "^6",
     "ext-pdo": "*"
